--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="jira"></div>
+    <div id="root"></div>
+    <div id="time"></div>
   </body>
 </html>
